[project]
name = "rca-accelerator-tools"
version = "0.1.0"
description = "A set of tools (read scripts) that can be used to deploy RCAaccelerator/chatbot"
authors = []
dependencies = [
    "openai==1.68.2",
    "qdrant-client==1.13.3",
    "transformers==4.50.3",
    "pandas==2.2.3",
    "langchain==0.3.22",
    "langchain-openai>=0.3.11",
    "langchain-huggingface>=0.1.2",
]
requires-python = "==3.12.*"

[tool.pdm.dev-dependencies]
dev = [
    "tox==4.25.0",
    "pylint==3.0.0",
    "fastapi==0.115.8",
    "flake8==7.0.0",
    "ruff==0.9.0",
]

[tool.setuptools]
py-modules = []

[project.scripts]
jira_scraper = "jira_scraper.main:command"

[tool.setuptools.packages.find]
include = ["jira_scraper*"]
namespaces = false
