[project]
name = "rca-accelerator-tools"
version = "0.1.0"
description = "A set of tools (read scripts) that can be used to deploy RCAaccelerator/chatbot"
authors = []
dependencies = [
    "openai==1.68.2",
    "qdrant-client==1.13.3",
    "transformers==4.50.3",
    "pandas==2.2.3",
    "langchain-text-splitters>=0.3.8",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "google-api-python-client>=2.166.0",
    "google-auth>=2.38.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.28.1",
]
requires-python = "==3.12.*"

[tool.pdm.dev-dependencies]
dev = [
    "tox==4.25.0",
    "pylint==3.0.0",
    "fastapi==0.115.8",
    "ruff==0.9.0",
]

[tool.setuptools]
py-modules = []

[project.scripts]
jira_scraper = "jira_scraper.main:command"
feedback_exporter = "feedback_exporter.export_feedback:main"

[tool.setuptools.packages.find]
include = ["jira_scraper*", "feedback_exporter*"]
namespaces = false
